# docorvter

./: .gitignore  404.html  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  sitemap.xml
api_docs/: index.html
api_docs/Converter/: index.html
api_docs/Files/: index.html
api_docs/Users/: index.html
backend/: .dockerignore  .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
backend/.docker-compose/: development.yml  production.yml
backend/.env.sample/: .env.production
backend/api/: __init__.py
backend/api/converter/: __init__.py  tasks.py  urls.py  views.py
backend/api/converter/document_converter/: __init__.py
backend/api/converter/document_converter/converter/: __init__.py  converter.py  html_converter.py
backend/api/converter/document_converter/document/: __init__.py  document.py  pdf_document.py
backend/api/files/: __init__.py  models.py  serializers.py  storage.py  urls.py  views.py
backend/api/users/: __init__.py  jwt_auth.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/: asgi.py  celery.py  settings.py  storage.py  urls.py  views.py  wsgi.py
backend/src/settings/: development.py  production.py
docs/: gen_ref_pages.py  index.md
docs/api_docs/: Converter.md  Files.md  Users.md  index.md
docs/documents/: api_design_document.md  database_design_document.md  requirements_document.md
documents/: index.html
documents/api_design_document/: index.html
documents/database_design_document/: index.html
documents/requirements_document/: index.html
infrastructure/: .backend.hcl.sample  .secrets.auto.tfvars.sample  aws.tf  main.tf
infrastructure/modules/aws/: RDS.tf  S3.tf
kubernetes/: deployment.yml  service.yml
reference/backend/api/: index.html
reference/backend/api/converter/: index.html
reference/backend/api/converter/document_converter/: index.html
reference/backend/api/converter/tasks/: index.html
reference/backend/api/converter/urls/: index.html
reference/backend/api/files/: index.html
reference/backend/api/users/: index.html
reference/summary/: index.html
scripts/: get_infra_output.py  run_backend.py
search/: search_index.json
(+19 files in other folders)
