[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API"
authors = ["Mustafa Abdallah <mustafa.abdulluh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
pdfkit = "^1.0.0"
pyjwt = "^2.6.0"
celery = "^5.2.7"
redis = "^4.5.3"
flower = "^1.2.0"
python-decouple = "^3.8"
django-storages = "^1.13.2"
boto3 = "^1.26.103"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.1.4"
interrogate = "^1.5.0"
pydocstyle = "^6.3.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
